fix on mobile?

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@
 
 html {
     background-color: #1a1b26;
+    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
 }
 
 body {
